add function to boot to other OS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,6 @@
-cmake_minimum_required(VERSION 2.30)
+cmake_minimum_required(VERSION 3.20)
 project(bootcurrent)
 
 add_executable(bootcurrent main.cpp)
+
+target_compile_features(bootcurrent PUBLIC cxx_std_20)
